@@ -77,7 +77,7 @@
 #
 ##########################################################################################################
 #
-## IPMI_Temperature_State
+## IPMI_Temperature_Limit
 #
 # IPMI_Temperature_Limit_No_Event       Nominal
 # IPMI_Temperature_Limit_Not_Exceeded   Nominal
